--- a/style.css
+++ b/style.css
@@ -447,3 +447,34 @@ custom_code {
 */
 
 
+
+
+
+{
+    box-sizing: border-box;
+}
+/* Set additional styling options for the columns */
+.column {
+float: left;
+}
+
+/* Set width length for the left, right and middle columns */
+.left {
+width: 33.3%;
+}
+
+.middle {
+width: 33.3%;
+}
+
+.right {
+width: 33.3%;
+}
+
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
+
+
