--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 /*
-Template name: Grunge Superstar
-Template URI: https://vikpe.org/archive/arcsin-web-templates/grunge-superstar-website-template/
-Release date: 2008-06-15
-Description: A dirty, monochrome single-column template.
-Author: Viktor Persson
-Author URI: https://vikpe.org/
+Template
 */
 
 /* --------------------------------
