--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 */
 
 body {
-background: #f0f0f0;
+background: #4d5054;
     color: #444;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 133.5%;
