--- a/style.css
+++ b/style.css
@@ -490,6 +490,7 @@ clear: both;
   }
 .grid img {
   border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   max-width: 100%;
 }
 .oneThird{
