--- a/style.css
+++ b/style.css
@@ -479,6 +479,9 @@ clear: both;
 
 
 
+/* ----------------------------------------
+   Gallery of photos
+------------------------------------------- */
 
 
 .grid { 
