--- a/style.css
+++ b/style.css
@@ -496,6 +496,11 @@ clear: both;
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   max-width: 100%;
 }
+.grid video {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
 .oneThird{
     width: 100%;
     float: center;
