--- a/style.css
+++ b/style.css
@@ -484,7 +484,31 @@ clear: both;
 ------------------------------------------- */
 
 
-.grid { 
+.grid4 { 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  align-items: center;
+  justify-items: center;
+  }
+.grid img {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
+.grid video {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
+.oneThird{
+    width: 100%;
+    float: center;
+    margin: -3.5%;
+}
+
+
+.grid2 { 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
