--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ clear: both;
 
 .grid2 { 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   align-items: center;
   justify-items: center;
