--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ clear: both;
 
 
 /* ----------------------------------------
-   Gallery of photos
+   Grid of images
 ------------------------------------------- */
 
 
@@ -501,7 +501,31 @@ clear: both;
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   max-width: 100%;
 }
-.oneThird{
+.oneBoxx{
+    width: 100%;
+    float: center;
+    margin: -3.5%;
+}
+
+
+.grid3 { 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  align-items: center;
+  justify-items: center;
+  }
+.grid3 img {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
+.grid3 video {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
+.oneBoxx{
     width: 100%;
     float: center;
     margin: -3.5%;
@@ -525,7 +549,7 @@ clear: both;
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   max-width: 100%;
 }
-.oneThird{
+.oneBoxx{
     width: 100%;
     float: center;
     margin: -3.5%;
