--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 */
 
 body {
-background: #4d5054;
+	background: #4d5054;
     color: #444;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 133.5%;
@@ -39,13 +39,17 @@ small,.small {font-size: 0.9em;}
 a {
 	color: #004365;
 	text-decoration: none;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 a:hover {
 	color: #0758a3;
 	text-decoration: underline;
 }
 
-p {padding: 0.2em 0 0.6em;}
+p {
+	padding: 0.2em 0 0.6em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
 
 blockquote, code {
 	background: #dedcdc;
@@ -77,10 +81,18 @@ blockquote p {padding: 0.5em 0;}
    Headings, titles
 ----------------------------------- */
 
-h1 {font: bold 1.9em Georgia,sans-serif;}
-h2 {font: bold 1.5em Georgia,sans-serif;}
-h3 {font: bold 1.3em Georgia,sans-serif;}
-h4 {font: bold 1.0em Georgia,sans-serif;}
+h1 {font: bold 1.9em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+h2 {font: bold 1.5em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+h3 {font: bold 1.3em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+h4 {font: bold 1.0em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
 
 h1, h2, h3, h4 {margin-bottom: 8px;}
 
