--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 body {
 background: #4d5054;
     color: #444;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 133.5%;
     height: 100%;
     padding-bottom: 1px;
@@ -77,10 +77,10 @@ blockquote p {padding: 0.5em 0;}
    Headings, titles
 ----------------------------------- */
 
-h1 {font: bold 1.9em Georgia,sans-serif;}
-h2 {font: bold 1.5em Georgia,sans-serif;}
-h3 {font: bold 1.3em Georgia,sans-serif;}
-h4 {font: bold 1.0em Georgia,sans-serif;}
+h1 {font: bold 1.9em Arial,sans-serif;}
+h2 {font: bold 1.5em Arial,sans-serif;}
+h3 {font: bold 1.3em Arial,sans-serif;}
+h4 {font: bold 1.0em Arial,sans-serif;}
 
 h1, h2, h3, h4 {margin-bottom: 8px;}
 
@@ -125,7 +125,7 @@ h1, h2, h3, h4 {margin-bottom: 8px;}
 }
 #site_title h1 	{
 	color: #EED;
-	font: normal 2em Georgia,sans-serif;
+	font: normal 2em Arial,sans-serif;
 	margin: 0 0 5px;
 }
 #site_title h2 {
